routes/api-example-com-httproute.yaml
apiVersion: gateway.networking.k8s.io/v1beta1
kind: HTTPRoute
metadata:
  name: api-example-com
  namespace: ingress-gw
  labels:
    app: apis
spec:
  parentRefs:
    - name: gw
      namespace: ingress-gw
      # Bind to a specific listener in the parentRef (Gateway) using sectionName field.
      # sectionName: foo
  hostnames:
    - "api.example.com"
  rules:
    - matches:  
      - path:
          type: PathPrefix
          value: /
      # filters:
      # - type: ExtensionRef
      #   extensionRef:
      #     group: gateway.solo.io
      #     kind: RouteOption
      #     name: routeoption
      backendRefs:
      - name: httpbin
        namespace: httpbin
        port: 8000
